header: fix spacing when logo-text overflows

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -24,6 +24,7 @@
 .logo a {
     font-size: 24px;
     font-weight: 700;
+    margin-inline-end: 10px;
 }
 
 .logo a img {
@@ -37,7 +38,6 @@
 
 .theme-toggle svg {
     height: 18px;
-    margin-inline-end: 10px;
     user-select: none;
     cursor: pointer;
 }
@@ -88,5 +88,4 @@ body:not(.dark) #sun {
 .logo-switches {
     display: inline-flex;
     flex-wrap: inherit;
-    margin-inline-start: 10px;
 }
